--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-    <title>React App</title>
+    <title>Musicfy</title>
   </head>
-  <body>
+  <body style="-webkit-app-region: drag">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
